[gd_scene load_steps=7 format=3 uid="uid://b1m6pccxxude2"]

[ext_resource type="Script" path="res://Scenes/Weapons/Weapon.gd" id="1_1yfof"]
[ext_resource type="PackedScene" uid="uid://ceyeak3ionm2v" path="res://Scenes/Effects/AttacksEffects/ArrowAttack/arrow_effect.tscn" id="2_tuvsx"]
[ext_resource type="Texture2D" uid="uid://dbvb5q7nll6yw" path="res://Art/NewArt/BaseUnits.png" id="3_1alof"]

[sub_resource type="Animation" id="Animation_ph536"]
resource_name = "Attack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-6, 3), Vector2(1, 2), Vector2(6, 0), Vector2(-6, 3)]
}

[sub_resource type="Animation" id="Animation_xte1w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12u10"]
_data = {
"Attack": SubResource("Animation_ph536"),
"RESET": SubResource("Animation_xte1w")
}

[node name="Bow1" type="Marker2D" node_paths=PackedStringArray("own_body", "state_machine", "attack_state", "approach_state")]
script = ExtResource("1_1yfof")
attack_effect_scene = ExtResource("2_tuvsx")
own_body = NodePath("")
state_machine = NodePath("")
attack_state = NodePath("")
approach_state = NodePath("")
damage = 20.0
knockback_amount = 40.0
cooldown = 2.0
weapon_range = 100.0

[node name="AttackPoint" type="Marker2D" parent="."]
position = Vector2(14, 0)

[node name="Art" type="Sprite2D" parent="."]
position = Vector2(10, 0)
texture = ExtResource("3_1alof")
region_enabled = true
region_rect = Rect2(67, 115, 10, 26)

[node name="LeftHand" type="Sprite2D" parent="."]
position = Vector2(-6, 3)
texture = ExtResource("3_1alof")
region_enabled = true
region_rect = Rect2(68, 54, 6, 6)

[node name="WeaponAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_12u10")
}
speed_scale = 8.0

[connection signal="animation_finished" from="WeaponAnimations" to="." method="_on_weapon_animations_animation_finished"]
